<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <com.example.calculator.my_control.MyTextView
            android:id="@+id/myTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textSize="55sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline9"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toTopOf="@+id/guideline10" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.06" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.94" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.069767445" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/myTextView"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintStart_toStartOf="@+id/guideline6" />

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toTopOf="@+id/guideline9">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#6C6C6C"
                android:text="@string/_1"
                android:textSize="30sp"
                android:layout_margin="2dp"
                app:layout_column="0"
                app:layout_row="0" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#6C6C6C"
                android:text="@string/_2"
                android:textSize="30sp"
                android:layout_margin="2dp"
                app:layout_column="1"
                app:layout_row="0" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#6C6C6C"
                android:text="@string/_3"
                android:textSize="30sp"
                android:layout_margin="2dp"
                app:layout_column="2"
                app:layout_row="0" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#6C6C6C"
                android:text="@string/_4"
                android:textSize="30sp"
                android:layout_margin="2dp"
                app:layout_column="0"
                app:layout_row="1" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#6C6C6C"
                android:text="@string/_5"
                android:textSize="30sp"
                android:layout_margin="2dp"
                app:layout_column="1"
                app:layout_row="1" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#6C6C6C"
                android:text="@string/_6"
                android:textSize="30sp"
                android:layout_margin="2dp"
                app:layout_column="2"
                app:layout_row="1" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#6C6C6C"
                android:text="@string/_7"
                android:textSize="30sp"
                android:layout_margin="2dp"
                app:layout_column="0"
                app:layout_row="2" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="#6C6C6C"
                android:text="@string/_8"
                android:textSize="30sp"
                app:layout_column="1"
                app:layout_row="2" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#6C6C6C"
                android:text="@string/_9"
                android:textSize="30sp"
                android:layout_margin="2dp"
                app:layout_column="2"
                app:layout_row="2" />

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#6C6C6C"
                android:text="@string/_0"
                android:textSize="30sp"
                android:layout_margin="2dp"
                app:layout_column="1"
                app:layout_row="3" />

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#6C6C6C"
                android:text="@string/add"
                android:textSize="30sp"
                android:layout_margin="2dp"
                app:layout_column="3"
                app:layout_row="0" />

            <Button
                android:id="@+id/buttonSub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#6C6C6C"
                android:text="@string/sub"
                android:textSize="30sp"
                android:layout_margin="2dp"
                app:layout_column="3"
                app:layout_row="1" />

            <Button
                android:id="@+id/buttonMulti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#6C6C6C"
                android:text="@string/multi"
                android:textSize="30sp"
                android:layout_margin="2dp"
                app:layout_column="3"
                app:layout_row="2" />

            <Button
                android:id="@+id/buttonDivide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#6C6C6C"
                android:text="@string/divide"
                android:textSize="30sp"
                android:layout_margin="2dp"
                app:layout_column="3"
                app:layout_row="3" />

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#6C6C6C"
                android:text="@string/clear"
                android:textSize="30sp"
                android:layout_margin="2dp"
                app:layout_column="0"
                app:layout_row="3" />

            <Button
                android:id="@+id/buttonPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#6C6C6C"
                android:text="@string/point"
                android:textSize="30sp"
                android:layout_margin="2dp"
                app:layout_column="2"
                app:layout_row="3" />

            <Button
                android:id="@+id/buttonRes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#6C6C6C"
                android:text="@string/res"
                android:textSize="30sp"
                android:layout_margin="2dp"
                app:layout_column="0"
                app:layout_row="4" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="88dp"
                android:layout_height="60dp"
                android:layout_margin="2dp"
                android:background="#009688"
                app:layout_column="3"
                app:layout_row="4"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
        </androidx.gridlayout.widget.GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>